Fix play button alignment

--- a/download.css
+++ b/download.css
@@ -132,13 +132,13 @@ h3 {
 }
 
 img.playstore{
-  padding: 2% 3%;
-  height: 10%;
-  max-width: 50%;
+  padding: 3% 2% 1% 2%;
+  max-height: 200px;
+  max-width: 45%;
 }
 
 img.windows{
-  padding: 2% 3%;
-  height: 10%;
-  max-width: 45%;
+  padding: 3% 2% 1% 3%;
+  max-height: 170px;
+  max-width: 40%;
 }
